# pythonbooks

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: main.yml  ruff.yml
apps/books/: admin.py  models.py
apps/books/api/: filters.py  serializers.py  urls.py  views.py
apps/books/management/commands/: parse_books.py
apps/books/migrations/: 0001_initial.py
apps/books/scrapers/: base_scraper.py  piter.py
apps/books/scrapers/piter_publ/: book_parser.py  link_extractor.py  paginator.py  piter_scraper.py
backend/pythonbooks/: manage.py
backend/pythonbooks/pythonbooks/: asgi.py  settings.py  urls.py  wsgi.py
config/: settings.py  urls.py
logger/: logger.py
pgdata/base/1/: 2619
pgdata/base/16384/: pg_internal.init
pgdata/base/5/: pg_internal.init
pgdata/global/: 1260  1262  2671  pg_control
pgdata/pg_stat/: pgstat.stat
