[project]
name = "pythonbooks"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "django-ckeditor-5==0.2.17",
    "django-environ>=0.12.0",
    "django-extensions>=4.1",
    "django==5.1.7",
    "djangorestframework>=3.16.0",
    "drf-spectacular>=0.28.0",
    "psycopg2-binary>=2.9.10",
    "sorl-thumbnail==12.11.0",
    "python-dotenv>=1.0.0",
]